--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LETSCHAT WEB APP</title>
+	<title>lets chat web app</title>
 <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -10,22 +10,25 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="kwitter.js"></script>
-
-<body >
-    <center>
-    <div class="container">
-        <button id="logout" onclick="logout();" class="glyphicon glyphicon-log-out btn btn-danger">logout</button>
-    </div>
-
-<div class="form-group input_div_room_page">
-    <label>#Add Room:</label>
-    <input type="text" id="room_name" class="form-control" placeholder="#Room Name">
-</div>
-
-<button onclick="addRoom();" class="btn btn-success">#Add Room</button>
-
-<h3 class="color_white">#TRENDINGROOMS</h3>
-
-<div id="output"></div>
-    </center>
+</head>
+<body>
+<center>
+	<h1 class="header">	
+		Kwitter	<sup>
+	<img src="m2.png">
+	</sup>
+</h1>
+	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
+	<img src="logo.png" class="logo">
+		<h3 >See what is happening in the world right now</h3>
+		<h4 >Join Kwitter today</h4>
+		<div class="form-group">
+		  <label >User Name:</label>
+<input type="text" id="user_name" class="form-control" placeholder="User Name">
+		</div>
+		<button id="login_button" class="btn btn-primary" onclick="addUser()">Log in</button>
+		<br><br>
+	</div>
+</center>
 </body>
+</html>
